--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="//AppCo.themetags.com/favicon.png">
+  <link rel="icon" href="https://appco.themetags.com/img/favicon.png">
   <title>AppCo App Landing Page Template</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="AppCo - App Landing Page Template using SCSS">
